# openenv-hack

./: .gitignore  Dockerfile  README.md  TASK_DESIGN.md  app.py  env.py  inference.py  openenv  openenv.yaml  pyproject.toml  requirements.txt  run_demo.py  validate.py
evaluators/: __init__.py  ai_exploitation_evaluator.py  auth_evaluator.py  base.py  cloud_identity_evaluator.py  spearphish_evaluator.py  sql_evaluator.py  xss_evaluator.py
server/: app.py
tasks/: __init__.py  ai_tool_exploitation.py  auth_bypass.py  base.py  cloud_identity_intrusion.py  spearphish_credential.py  sql_injection.py  xss_injection.py
utils/: __init__.py  action_parser.py  state_extractor.py
